--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
     "bootstrap": "4.5.3",
+    "datatables.net": "^1.10.24",
+    "datatables.net-bs4": "^1.10.24",
+    "imports-loader": "^2.0.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1"
   },
